<resources>
    <string name="app_name">Tiny Weather Forecast Germany</string>
    <string name="account_type" translatable="false">de.kaffeemitkoffein.tinyweatherforecastgermany</string>
    <string name="main_selectstation">Region:</string>
    <string name="main_updatetime">Last Update:</string>
    <string name="main_wait_for_gps_fix">Location is being determinded…</string>
    <string name="dwd_notice">Data basis: Deutscher Wetterdienst, own elements added, some data averaged over individual values.</string>
    <string name="dwd_notice_app">Data basis: Deutscher Wetterdienst, own elements added, some data averaged over individual values. Warnings abbreviated.</string>
    <string name="dwd_warnings_notice">Data basis: Deutscher Wetterdienst, displaying condensed warnings. </string>
    <string name="dwd_textforecast_notice">Data basis: Deutscher Wetterdienst, own elements added, layout changed.</string>
    <string name="new_station">Region changed to</string>
    <string name="license_button">License</string>
    <string name="update_button">Update</string>
    <string name="settings_button">Settings</string>
    <string name="geoinput_button">Find by location</string>
    <string name="travel_button">Update everything</string>
    <string name="about_button">Privacy/About</string>
    <string name="warnings_button">Weather warnings</string>
    <string name="texts_button">Texts</string>
    <string name="overview_button">Overview</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="dayaftertomorrow">day after tomorrow</string>
    <string name="station">Station</string>
    <string name="whatsnew_button">What\'s new</string>
    <string name="classicwidget_description">Weather in Detail</string>
    <string name="classicwidget_description_detailed">Current weather and detailed forecast for the next days.</string>
    <string name="boldwidget_description">Compact Weather</string>
    <string name="boldwidget_description_detailed">A compact summary of the most important weather information for today and the next few days.</string>
    <string name="clockwidget_description">Weather and Time</string>
    <string name="clockwidget_description_detailed">Detailed weather information for today with date, clock and alarm clock.</string>
    <string name="chartwidget_description">Weather Chart</string>
    <string name="chartwidget_description_detailed">The weather forecast for the next few days as a diagram.</string>
    <string name="largewidget_description">Large</string>
    <string name="preview_fake_warning_text">WIND GUSTS</string>
    <string name="station_does_not_exist">The station you have entered does not exist. Please select from the suggested stations in the list.</string>
    <string name="favorites_cleared">Favorites are deleted.</string>
    <string name="favorites_delete_title">Delete favorites</string>
    <string name="favorites_delete_summary">Remove all favorites except the current weather location?</string>
    <string name="actionbar_textinput_title">Enter place here:</string>
    <string name="actionbar_textinput_hint">Try country specific notations</string>
    <string name="weathercode_UNKNOWN">unknown</string>
    <string name="weathercode_SLIGHT_OR_MODERATE_THUNDERSTORM_WITH_RAIN_OR_SNOW">thunderstorm</string>
    <string name="weathercode_DRIZZLE_FREEZING_MODERATE_OR_HEAVY">freezing drizzle</string>
    <string name="weathercode_DRIZZLE_FREEZING_SLIGHT">slight freezing drizzle</string>
    <string name="weathercode_RAIN_FREEZING_MODERATE_OR_HEAVY">freezing rain</string>
    <string name="weathercode_RAIN_FREEZING_SLIGHT">slight freezing rain</string>
    <string name="weathercode_SNOW_SHOWERS_MODERATE_OR_HEAVY">snow showers</string>
    <string name="weathercode_SNOW_SHOWERS_SLIGHT">slight snow showers</string>
    <string name="weathercode_SHOWERS_OF_RAIN_AND_SNOW_MIXED_MODERATE_OR_HEAVY">showers of rain and snow mixed</string>
    <string name="weathercode_SHOWERS_OF_RAIN_AND_SNOW_MIXED_SLIGHT">slight showers of rain and snow mixed</string>
    <string name="weathercode_EXTREMELY_HEAVY_RAIN_SHOWER">extremely heavy rain showers</string>
    <string name="weathercode_MODERATE_OR_HEAVY_RAIN_SHOWERS">rain showers</string>
    <string name="weathercode_SLIGHT_RAIN_SHOWER">slight rain showers</string>
    <string name="weathercode_HEAVY_SNOWFALL_CONTINUOUS">heavy snowfall, continuous</string>
    <string name="weathercode_MODERATE_SNOWFALL_CONTINUOUS">moderate snowfall, continuous</string>
    <string name="weathercode_SLIGHT_SNOWFALL_CONTINUOUS">slight snowfall, continuous</string>
    <string name="weathercode_MODERATE_OR_HEAVY_RAIN_AND_SNOW">rain and snow</string>
    <string name="weathercode_SLIGHT_RAIN_AND_SNOW">slight rain and snow</string>
    <string name="weathercode_HEAVY_DRIZZLE_NOT_FREEZING_CONTINUOUS">heavy drizzle, continuous</string>
    <string name="weathercode_MODERATE_DRIZZLE_NOT_FREEZING_CONTINUOUS">moderate drizzle, continuous</string>
    <string name="weathercode_SLIGHT_DRIZZLE_NOT_FREEZING_CONTINUOUS">slight drizzle, continuous</string>
    <string name="weathercode_HEAVY_RAIN_NOT_FREEZING_CONTINUOUS">heavy rain, continuous</string>
    <string name="weathercode_MODERATE_RAIN_NOT_FREEZING_CONTINUOUS">moderate rain, continuous</string>
    <string name="weathercode_SLIGHT_RAIN_NOT_FREEZING_CONTINUOUS">slight rain, continuous</string>
    <string name="weathercode_ICE_FOG_SKY_NOT_RECOGNIZABLE">ice fog</string>
    <string name="weathercode_FOG_SKY_NOT_RECOGNIZABLE">fog</string>
    <string name="weathercode_EFFECTIVE_CLOUD_COVER_AT_LEAST_7_8">mostly cloudy</string>
    <string name="weathercode_EFFECTIVE_CLOUD_COVER_BETWEEN_46_8_AND_6_8">moderate clouds</string>
    <string name="weathercode_EFFECTIVE_CLOUD_COVER_BETWEEN_1_8_AND_45_8">slightly cloudy</string>
    <string name="weathercode_EFFECTIVE_CLOUD_COVER_LESS_THAN_1_8">fair</string>
    <string name="title_activity_warnings">Weather Warnings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_textlist">Texts</string>
    <string name="clouds">Clouds:</string>
    <string name="rain">Rain:</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="preference_category_display">Display</string>
    <string name="preference_category_general">Weather data</string>
    <string name="preference_category_widget">Widget settings</string>
    <string name="preference_category_warnings">Weather warnings</string>
    <string name="preference_category_texts">Text forecasts</string>
    <string name="preference_sync_weather_title">Sync weather</string>
    <string name="preference_sync_weather_summary">Regularly update the weather forecast.</string>
    <string name="preference_sync_warnings_title">Sync warnings</string>
    <string name="preference_sync_warnings_summary">Regularly update the weather warnings.</string>
    <string name="preference_sync_textforecasts_title">Sync texts</string>
    <string name="preference_sync_textforecasts_summary">Regularly update the weather texts.</string>
    <string name="preference_sync_maps_title">Sync maps</string>
    <string name="preference_sync_maps_summary">Regularly update the weather maps.</string>
    <string name="preference_sync_pollen_title">Sync pollen count</string>
    <string name="preference_sync_pollen_summary">Regularly update the pollen count forecast.</string>
    <string name="preference_sync_notice">You can customize the sync settings inside the app.</string>
    <string name="preference_category_sync">Sync settings</string>
    <string name="preference_category_other">Other</string>
    <string name="preference_theme_title">Design</string>
    <string name="preference_theme_summary">Chose the color palette</string>
    <string name="preference_updateinterval_title">Interval: weather</string>
    <string name="preference_pdateinterval_summary">Select how often the weather data should be updated.</string>
    <string name="preference_update_textforecasts_title">Update texts</string>
    <string name="preference_update_textforecasts_summary">Keep weather texts updated</string>
    <string name="preference_opacity_title">Widget opacity</string>
    <string name="preference_opacity_summary">Select how transparent the widget is on your home screen.</string>
    <string name="preference_displaywarninginwidget_title">Show warnings in widget</string>
    <string name="preference_widget_clock_title">Clock size</string>
    <string name="preference_widget_clock_summary">Adjust the clock size in the weather and time widget.</string>
    <string name="preference_displaywarninginwidget_summary">Display warnings for your selected location in widgets.</string>
    <string name="preference_screen_notifications_title">Notifications</string>
    <string name="preference_screen_notifications_summary">Customize notifications about weather warnings.</string>
    <string name="preference_notify_warnings_title">Enable notifications</string>
    <string name="preference_notify_warnings_summary">Notify new warnings for your selected location.</string>
    <string name="preference_notifySeverity_title">Warning category</string>
    <string name="preference_notifySeverity_summary">Notify about warnings of category \"%1$s\" or higher.</string>
    <string name="preference_notify_LED_title">LED notifications</string>
    <string name="preference_notify_LED_summary">Use notification LED if available.</string>
    <string name="preference_notify_LEDcolor_title">Notification color</string>
    <string name="preference_notify_LEDcolor_summary">Select the notification LED color.</string>
    <string name="preference_notify_LEDcolor_current">Current color: </string>
    <string name="preference_led_notice_title">Notice</string>
    <string name="preference_displaynoteinwidget_title">Display DWD note</string>
    <string name="preference_displaynoteinwidget_summary">Show the data source string.</string>
    <string name="alertdialog_ok">OK</string>
    <string name="welcome_next">NEXT</string>
    <string name="welcome_s1_text1">free, libre, open source</string>
    <string name="welcome_s1_text2">supports &gt; 6000 locations</string>
    <string name="welcome_s1_text3">forecast for up to 10 days</string>
    <string name="welcome_s1_text4">weather warnings for Germany</string>
    <string name="welcome_s1_text5">home screen widgets</string>
    <string name="geoinput_hint_longitude">e.g. 10.1, -10:01.22342, 10:01:12345</string>
    <string name="geoinput_hint_latitude">e.g. 53.575, -33:12.32, 21:43:12</string>
    <string name="geoinput_intro">Enter longitude and latitude manually to determine next weather stations or use the location services of your device to find them.</string>
    <string name="geoinput_known_note">This is your location from:</string>
    <string name="geoinput_longitude">Enter longitude (-180 to 180):</string>
    <string name="geoinput_latitude">Enter latitude (-90 to 90):</string>
    <string name="geoinput_gps">Use the location services of the device to determine your current location.</string>
    <string name="geoinput_select">Select one of the following weather stations:</string>
    <string name="geoinput_reflocation_title">The reference location is:</string>
    <string name="geoinput_reflocation_longitude">Longitude:</string>
    <string name="geoinput_reflocation_latitude">Latitude:</string>
    <string name="geoinput_reflocation_time">Time:</string>
    <string name="hint_no">Do not show hints</string>
    <string name="hint_1">Press the time indicator at the bottom left to set the rain radar to the beginning. Press on the legend to rewind. If the radar fails to load, the time display is yellow. If at least an outdated image can be displayed, the time display is orange.</string>
    <string name="wm_maps">Weather maps</string>
</resources>