<?xml version="1.0" encoding="utf-8"?>

<!--
 This file is part of TinyWeatherForecastGermany.

 Copyright (c) 2020, 2021 Pawel Dube

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_refresh"
        android:title="@string/update_button"
        android:icon="?attr/ic_refresh"
        android:showAsAction="always"
        android:orderInCategory="1">
    </item>
    <item android:id="@+id/menu_warnings"
        android:title="@string/warnings_button"
        android:icon="?attr/warning_icon"
        android:showAsAction="always"
        android:orderInCategory="2">
    </item>
    <item android:id="@+id/menu_maps"
          android:title="@string/wm_maps"
          android:icon="?attr/ic_map"
          android:showAsAction="ifRoom"
          android:orderInCategory="3">
    </item>
    <item android:id="@+id/menu_texts"
        android:title="@string/texts_button"
        android:icon="?attr/ic_short_text"
        android:showAsAction="ifRoom"
        android:orderInCategory="4">
    </item>
    <item android:id="@+id/menu_settings"
        android:title="@string/settings_button"
        android:icon="?attr/ic_settings"
        android:showAsAction="never"
        android:orderInCategory="5">
    </item>
    <item android:id="@+id/menu_geoinput"
        android:title="@string/geoinput_button"
        android:icon="?attr/ic_gps_fixed"
        android:showAsAction="never"
        android:orderInCategory="6">
    </item>
    <item android:id="@+id/menu_travelupdate"
          android:title="@string/travel_button"
          android:icon="?attr/ic_list"
          android:showAsAction="never"
          android:orderInCategory="7">
    </item>
    <item android:id="@+id/menu_about"
        android:title="@string/about_button"
        android:icon="?attr/ic_info_outline"
        android:showAsAction="never"
        android:orderInCategory="8">
    </item>
    <item android:id="@+id/menu_license"
        android:title="@string/license_button"
        android:icon="?attr/ic_copyright"
        android:showAsAction="never"
        android:orderInCategory="9">
    </item>
    <item android:id="@+id/menu_whatsnew"
        android:title="@string/whatsnew_button"
        android:icon="?attr/ic_announcement"
        android:showAsAction="never"
        android:orderInCategory="10">
    </item>

</menu>