<?xml version="1.0" encoding="utf-8"?>

<!--
 This file is part of TinyWeatherForecastGermany.

 Copyright (c) 2020, 2021 Pawel Dube

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_screen1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="?attr/colorWelcomeBackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/welcome_screen1_linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:paddingBottom="40dp"
        android:weightSum="20"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/welcome_screen1_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible"
            android:layout_weight="8"
            android:src="@mipmap/ic_launcher">
        </ImageView>

        <TextView
            android:id="@+id/welcome_screen1_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText"
            android:text="@string/welcome_s1_text1"
            android:textSize="@dimen/welcome_text_size"
            android:paddingBottom="@dimen/welcome_text_padding"/>

        <ImageView
                android:id="@+id/welcome_screen1_gplimage"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/gplv3"/>

        <TextView
            android:id="@+id/welcome_screen1_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText"
            android:text="@string/welcome_s1_text2"
            android:textSize="@dimen/welcome_text_size"
            android:paddingBottom="@dimen/welcome_text_padding"/>

        <TextView
            android:id="@+id/welcome_screen1_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText"
            android:text="@string/welcome_s1_text3"
            android:textSize="@dimen/welcome_text_size"
            android:paddingBottom="@dimen/welcome_text_padding"/>

        <TextView
            android:id="@+id/welcome_screen1_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText"
            android:text="@string/welcome_s1_text4"
            android:textSize="@dimen/welcome_text_size"
            android:paddingBottom="@dimen/welcome_text_padding"/>

        <TextView
            android:id="@+id/welcome_screen1_text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText"
            android:text="@string/welcome_s1_text5"
            android:textSize="@dimen/welcome_text_size"
            android:paddingBottom="@dimen/welcome_text_padding"/>

    </LinearLayout>

    <TextView
        android:id="@+id/welcome_screen1_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="?attr/colorText"
        android:text="@string/welcome_next"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/welcome_action_size"
        android:paddingBottom="@dimen/welcome_action_padding"/>


</RelativeLayout>