<?xml version="1.0" encoding="utf-8"?>

<!--
 This file is part of TinyWeatherForecastGermany.

 Copyright (c) 2020, 2021, 2022, 2023 Pawel Dube

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/hint2_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/roundedbox_hint">

    <ImageView
            android:id="@+id/hint2_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/ic_info_outline_white_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

    <Button
            android:id="@+id/hint2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertdialog_ok"
            android:textSize="@dimen/fcmain_textsize_medium"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

    <CheckBox
            android:id="@+id/hint2_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/hint2_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/fcmain_textsize_medium"
            android:text="@string/hint_no"
            android:checked="false"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/hint2_button"
            android:layout_below="@id/hint2_icon"
            android:gravity="center"
            android:fillViewport="true"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp">

        <TextView
                android:id="@+id/hint2_text"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="@dimen/fcmain_textsize_xl_half"
                android:text="@string/hint_1"/>

    </ScrollView>


</RelativeLayout>